# multi-queue

./: .gitignore  README.md  example.py  pyproject.toml
multi_queue/: __init__.py
src/multi_queue/: broadcast.py
tests/: test_simple.py
