[project]
name = "multi-queue"
dynamic=["version"]
description = ""
authors = [
    { name = "fdv1", email = "francois@pytek.io" },
]
readme = "README.md"
packages = [{include = "src"}]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"